fix horizontal scrollbar

--- a/src/Styles/FormStyles.css
+++ b/src/Styles/FormStyles.css
@@ -1,8 +1,3 @@
-body {
-  height: 100vh;
-  width: 100vw;
-}
-
 .bckg {
   background-color: #b9d8fa;
   min-height: 100vh;
